[workspace]
members = [ "example","rhosql-macros"]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["ariaandika"]
repository = "https://github.com/ariaandika/rhosql"
readme = "README.md"
license = "MIT"

[package]
name = "rhosql"
description = "SQLite Toolkit"
documentation = "https://docs.rs/rhosql"
keywords = ["sqlite", "database"]
categories = ["database"]
readme.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
libsqlite3-sys = "0.32.0"
log = { version = "0.4.27", optional = true }
lru = { version = "0.13.0", default-features = false }
rhosql-macros = { version = "0.1.0", path = "./rhosql-macros" }

[features]
bundled = ["libsqlite3-sys/bundled"]
log = ["dep:log"]

