[package]
name = "rhosql-macros"
description = "SQLite Toolkit Macros"
documentation = "https://docs.rs/rhosql-macros"
keywords = ["macro"]
readme.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.94"
quote = "1.0.40"
syn = "2.0.100"
